fixed StatusBar layout on mobile devices

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -12,6 +12,7 @@
     flex-direction: column;
     height: auto;
     padding-bottom: 15px;
+    padding-top: 10px;
 
     .hfui-tradingpage__menu, .hfui-navbar__main-links {
       justify-content: center;
